Trying to add websocket server
